// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YouTube template integration test should center YouTube template with caption through the full processing pipeline 1`] = `
"<center>{{Youtube|ZNePfBmCZbM}}

If you can't see the fantastic video by [https://x.com/_amentos Amentos] above, [https://www.youtube.com/watch?v=ZNePfBmCZbM click here].</center>"
`;

exports[`YouTube template integration test should center standalone YouTube template without caption 1`] = `
"<center>{{Youtube|ZNePfBmCZbM}}
</center>"
`;
